Project development
Adding new data models and endpoints for the API
Swagger generation
Implementation
Tests
Database edition
Generating hibernate from the database
Tests
