# src/main/java/pl/wsb/students/model/LogOutUserRequest.java
@@ -1,0 +1,89 @@
+/*
+ * Java WSB Course Sample Movie App API
+ * Sample Movie App API
+ *
+ * OpenAPI spec version: 0.0.1
+ * 
+ *
+ * NOTE: This class is auto generated by the swagger code generator program.
+ * https://github.com/swagger-api/swagger-codegen.git
+ * Do not edit the class manually.
+ */
+
+
+package pl.wsb.students.model;
+
+import java.util.Objects;
+import com.fasterxml.jackson.annotation.JsonProperty;
+import io.swagger.annotations.ApiModelProperty;
+import javax.validation.constraints.*;
+
+/**
+ * LogOutUserRequest
+ */
+@javax.annotation.Generated(value = "io.swagger.codegen.languages.JavaJerseyServerCodegen", date = "2020-06-11T08:36:54.348Z")
+public class LogOutUserRequest   {
+  @JsonProperty("id")
+  private Integer id = null;
+
+  public LogOutUserRequest id(Integer id) {
+    this.id = id;
+    return this;
+  }
+
+  /**
+   * User id
+   * @return id
+   **/
+  @JsonProperty("id")
+  @ApiModelProperty(required = true, value = "User id")
+  @NotNull
+  public Integer getId() {
+    return id;
+  }
+
+  public void setId(Integer id) {
+    this.id = id;
+  }
+
+
+  @Override
+  public boolean equals(java.lang.Object o) {
+    if (this == o) {
+      return true;
+    }
+    if (o == null || getClass() != o.getClass()) {
+      return false;
+    }
+    LogOutUserRequest logOutUserRequest = (LogOutUserRequest) o;
+    return Objects.equals(this.id, logOutUserRequest.id);
+  }
+
+  @Override
+  public int hashCode() {
+    return Objects.hash(id);
+  }
+
+
+  @Override
+  public String toString() {
+    StringBuilder sb = new StringBuilder();
+    sb.append("class LogOutUserRequest {\n");
+    
+    sb.append("    id: ").append(toIndentedString(id)).append("\n");
+    sb.append("}");
+    return sb.toString();
+  }
+
+  /**
+   * Convert the given object to string with each line indented by 4 spaces
+   * (except the first line).
+   */
+  private String toIndentedString(java.lang.Object o) {
+    if (o == null) {
+      return "null";
+    }
+    return o.toString().replace("\n", "\n    ");
+  }
+}
+
